[project]
name = "mindthegap"
version = "0.2.0"
description = "Stitch/unstitch proxy that preserves DeepSeek reasoning_content for OpenAI-compatible clients"
authors = [
    { name = "Raffaele Rialdi", email = "raffaeler@vevy.com" }
]
requires-python = ">=3.11"
license = "MIT"
urls = { Homepage = "https://github.com/raffaeler/mindthegap", Repository = "https://github.com/raffaeler/mindthegap", Issues = "https://github.com/raffaeler/mindthegap/issues" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "cryptography>=43",
]

[project.scripts]
mindthegap = "mindthegap.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "anyio>=4",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
